// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon/> renders correctly if prop name and border set 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS clFKbS"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and flip set horizontal 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS hCXohF"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and flip set vertical 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS kqzkZ"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and pulse set 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS jPgDGi"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and rotate set 0 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS cIAwjW"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and rotate set 90 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS eeJHVw"
  color=""
  onClick={[Function]}
  rotate={90}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and rotate set 180 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS jgfLiV"
  color=""
  onClick={[Function]}
  rotate={180}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and rotate set 270 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS kMfsam"
  color=""
  onClick={[Function]}
  rotate={270}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and size set inherit 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS hDxvtm"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and size set large 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS bufNPq"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and size set normal 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS cIAwjW"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and size set small 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS iCUYBh"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and spin set 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS guIFls"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and tabIndex set 1 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS cIAwjW"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
  tabIndex={1}
/>
`;

exports[`<Icon/> renders correctly if prop name and tabIndex set 100 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS cIAwjW"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
  tabIndex={100}
/>
`;

exports[`<Icon/> renders correctly if prop name set 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS cIAwjW"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop type set library and tabIndex set 1 1`] = `null`;

exports[`<Icon/> renders correctly with default props 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled-dGckvS cIAwjW"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders with "library" as type 1`] = `
<div
  className="IconLibraryStyled-cvmQrQ cIbUWc"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
  src=""
>
  <div
    className="IconHolderStyled-harwZO cryPLK"
    color=""
    rotate={0}
    size="normal"
    src="foo://bar"
  />
</div>
`;
